--- a/data_annotation/package.json
+++ b/data_annotation/package.json
@@ -14,7 +14,8 @@
     "@react-three/drei": "9.121.3",
     "react-cookie": "7.2.2",
     "uuid": "11.0.5",
-    "react-icons": "5.4.0"
+    "react-icons": "5.4.0",
+    "react-router": "7.1.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object":"^7.21.11"
